test/extern/bradc/sparseToExtern.good
sparseToExtern.chpl:13: error: c_ptrTo unsupported array type
